--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
  <p class="protest-riot-regular"> Q1: What two things can you never eat for breakfast? </p> 
  <div class="russo-one-regular" id="dip1" hidden>A: Lunch and dinner.</div>
  <div>
-<button onclick="h1()" class="paytone-one-regular"> Hide Answer </button>
-<button onclick="s1()" class="paytone-one-regular"> Show Answer</button> 
+<button onclick="h1()" class="paytone-one-regular" id="btn1"> Hide Answer </button>
+<button onclick="s1()" class="paytone-one-regular" id="btn2"> Show Answer</button> 
 </div>
 </div>
 
