--- a/index.html
+++ b/index.html
@@ -11,24 +11,229 @@
   </head>  
 <body>
 
+<img src="sign.png" alt="Riddle Sign">
  <div class="Wrapper">
  <p class="protest-riot-regular"> Q1: What two things can you never eat for breakfast? </p> 
  <div class="russo-one-regular" id="dip1" hidden>A: Lunch and dinner.</div>
- <div>
-<button onclick="h1()" class="paytone-one-regular" id="btn1"> Hide Answer </button>
-<button onclick="s1()" class="paytone-one-regular" id="btn2"> Show Answer</button> 
+ 
+<button onclick="toggleAnswer('dip1')" class="paytone-one-regular">Toggle Answer</button>
+
 </div>
 </div>
 
 <div class="Wrapper">
- <p class="protest-riot-regular">Q2: What has hands and a face, but can't hold anything or smile?  </p> 
+ <p class="protest-riot-regular">Q2: What has hands and a face, but can&#39t hold anything or smile?  </p> 
  <div class="russo-one-regular" id="dip2" hidden>A: A clock</div>
-<div>
-<button onclick="h2()" class="paytone-one-regular"> Hide Answer</button> 
-<button onclick="s2()" class="paytone-one-regular"> Show Answer </button> 
+
+<button onclick="toggleAnswer('dip2')" class="paytone-one-regular">Toggle Answer</button> 
+
 </div>
 </div>
 
+<div class="Wrapper">
+  <p class="protest-riot-regular">Q3: Bobby throws a ball as hard as he can. It comes back to him, even though nothing and nobody touches it. How? </p> 
+  <div class="russo-one-regular" id="dip3" hidden>A: He throws it straight up</div>
+ 
+ <button onclick="toggleAnswer('dip3')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q4: Why is an island like the letter &#39T&#39?</p> 
+  <div class="russo-one-regular" id="dip4" hidden>A: Because it is in the middle of water</div>
+ 
+ <button onclick="toggleAnswer('dip4')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q5: How do you make the number one disappear?</p> 
+  <div class="russo-one-regular" id="dip5" hidden>A: Add the letter ‘G’ and it’s gone</div>
+ 
+ <button onclick="toggleAnswer('dip5')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q6: Name three days consecutively where none of the seven days of the week appear.</p> 
+  <div class="russo-one-regular" id="dip6" hidden>A: Yesterday, today, and tomorrow</div>
+ 
+ <button onclick="toggleAnswer('dip6')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q7: Who is the fastest runner in the whole world?</p> 
+  <div class="russo-one-regular" id="dip7" hidden>A: Adam. He was the first in the human race.</div>
+ 
+ <button onclick="toggleAnswer('dip7')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q8: What Question can you never answer &#39Yes&#39 to?</p> 
+  <div class="russo-one-regular" id="dip8" hidden>A: Are you asleep yet?</div>
+ 
+ <button onclick="toggleAnswer('dip8')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+V
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q9: What is the centre of gravity?</p> 
+  <div class="russo-one-regular" id="dip9" hidden>A: The letter &#39V&#39</div>
+ 
+ <button onclick="toggleAnswer('dip9')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q10: Jack rode into town on Friday and rode out two days later on Friday. How can that be possible?</p> 
+  <div class="russo-one-regular" id="dip10" hidden>A: Friday is his horse&#39s name</div>
+ 
+ <button onclick="toggleAnswer('dip10')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q11: What is always in front of you but can&#39t be seen?</p> 
+  <div class="russo-one-regular" id="dip11" hidden>A: The future</div>
+ 
+ <button onclick="toggleAnswer('dip11')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q12: What did the beach say when the tide came in?</p> 
+  <div class="russo-one-regular" id="dip12" hidden>A: Long time, no sea!</div>
+ 
+ <button onclick="toggleAnswer('dip12')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q13: What kind of cup can&#39t hold water ?</p> 
+  <div class="russo-one-regular" id="dip13" hidden>A: A cupcake</div>
+ 
+ <button onclick="toggleAnswer('dip13')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q14: What has many rings, but no fingers?</p> 
+  <div class="russo-one-regular" id="dip14" hidden>A: A telephone</div>
+ 
+ <button onclick="toggleAnswer('dip14')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q15: Why isn&#39t your nose twelve inches long?</p> 
+  <div class="russo-one-regular" id="dip15" hidden>A: Because then it would be a foot</div>
+ 
+ <button onclick="toggleAnswer('dip15')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q16: What did the outlaw get when he stole a calendar?</p> 
+  <div class="russo-one-regular" id="dip16" hidden>A: Twelve months</div>
+ 
+ <button onclick="toggleAnswer('dip16')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q17: What bank never has any money?</p> 
+  <div class="russo-one-regular" id="dip17" hidden>A: The riverbank</div>
+ 
+ <button onclick="toggleAnswer('dip17')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q18: A man was driving his truck. His lights were not on. The moon was not out. Up ahead, a woman was crossing the street. How did he see her?</p> 
+  <div class="russo-one-regular" id="dip18" hidden>A: It was a bright and sunny day</div>
+ 
+ <button onclick="toggleAnswer('dip18')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q19: What can&#39t talk but will reply when spoken to?</p> 
+  <div class="russo-one-regular" id="dip19" hidden>A: An echo</div>
+ 
+ <button onclick="toggleAnswer('dip19')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q20: What is as light as a feather, but even the world&#39s strongest man couldn&#39t hold it for more than a minute? </p> 
+  <div class="russo-one-regular" id="dip20" hidden>A: His breath</div>
+ 
+ <button onclick="toggleAnswer('dip20')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q21: The more of this there is, the less you see.</p> 
+  <div class="russo-one-regular" id="dip21" hidden>A: Darkness</div>
+ 
+ <button onclick="toggleAnswer('dip21')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q22: Two fathers and two sons go on a fishing trip. They each catch a fish and bring it home. Why do they only bring three home?</p> 
+  <div class="russo-one-regular" id="dip22" hidden>A: The fishing trip consists of a grandfather, a father, and a son.</div>
+ 
+ <button onclick="toggleAnswer('dip22')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q23: What instrument can you hear but never see?</p> 
+  <div class="russo-one-regular" id="dip23" hidden>A: Your voice! You can sing with your voice like an instrument and hear it, but no one can see it.</div>
+ 
+ <button onclick="toggleAnswer('dip23')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q24: I have keys but no locks. I have space but no room. You can enter but can&#39t go outside. What am I? </p> 
+  <div class="russo-one-regular" id="dip24" hidden>A: A keyboard</div>
+ 
+ <button onclick="toggleAnswer('dip24')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
+
+ <div class="Wrapper">
+  <p class="protest-riot-regular">Q25: One night, a butcher, a baker, and a candlestick maker go to a hotel. When they get their bill, however, it&#39s for four people. Who&#39s the fourth person?
+   </p> 
+  <div class="russo-one-regular" id="dip25" hidden>A: One night can also mean one knight. That makes four &ndash; one knight, one butcher, a baker, and a candlestick maker!</div>
+ 
+ <button onclick="toggleAnswer('dip25')" class="paytone-one-regular">Toggle Answer</button> 
+ 
+ </div>
+ </div>
 <script src="riddle.js"></script>
 
 </body> 
